@@ -2,20 +2,14 @@ package com.matariky.commonservice.base.controller;
 
 import java.util.List;
 import java.util.Map;
-import java.util.HashMap;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.ResponseBody;
-import org.springframework.web.servlet.ModelAndView;
-import com.github.pagehelper.Page;
 import com.github.pagehelper.PageInfo;
 import com.github.pagehelper.PageHelper;
 import com.matariky.commonservice.base.bean.BasicBaseTraceabilityDetail;
@@ -33,13 +27,9 @@ import org.springframework.beans.factory.annotation.Value;
 
 import com.matariky.commonservice.commondict.service.CommonDictService;
 
-import org.springframework.web.bind.annotation.RequestBody;
-
 import com.matariky.commonservice.commondict.bean.CommonDict;
 
 import com.matariky.commonservice.commondict.bean.CommonDictType;
-
-import com.matariky.commonservice.commondict.service.CommonDictService;
 
 import com.matariky.commonservice.commondict.service.CommonDictTypeService;
 
@@ -51,25 +41,21 @@ import springfox.documentation.annotations.ApiIgnore;
 
 import com.matariky.utils.AjaxResult;
 
-import org.springframework.beans.factory.annotation.Value;
-
-import com.alibaba.fastjson.JSONObject;
-
 import com.matariky.exception.QslException;
 
 import com.matariky.commonservice.upload.constant.MessageKey;
 
-import com.matariky.constant.PermissionConstant;
-import com.matariky.exception.QslException;
 /**
-*Controller
-* @author AUTOMATION
-*/
+ * Controller
+ * 
+ * @author AUTOMATION
+ */
 @RestController
-	@RequestMapping("/api/v1/tenant/{tenantId}")
+@RequestMapping("/api/v1/tenant/{tenantId}")
 public class BasicBaseTraceabilityDetailController {
 
-	@Value("${message.locale}")	String locale;
+	@Value("${message.locale}")
+	String locale;
 	@Autowired
 	private BasicBaseTraceabilityDetailService basicBaseTraceabilityDetailService;
 
@@ -79,93 +65,104 @@ public class BasicBaseTraceabilityDetailController {
 	@Autowired
 	private CommonDictTypeService commonDictTypeService;
 
-	 
 	@RequestMapping("/basicBaseTraceabilityDetail/list")
-	public Object list(HttpServletRequest request,BasicBaseTraceabilityDetail bean, @ApiParam(value = " Tenant ID", required = true) @PathVariable("tenantId") String tenantId, @ApiParam(value = "Page Index", required = true) @RequestParam("index") int pageIndex,@ApiParam(value = "Page Size", required = true) @RequestParam("perPage") int perPage, @ApiParam(value = "JWT Token", required = true) @RequestHeader("Authorization") String jwt) {
+	public Object list(HttpServletRequest request, BasicBaseTraceabilityDetail bean,
+			@ApiParam(value = " Tenant ID", required = true) @PathVariable("tenantId") String tenantId,
+			@ApiParam(value = "Page Index", required = true) @RequestParam("index") int pageIndex,
+			@ApiParam(value = "Page Size", required = true) @RequestParam("perPage") int perPage,
+			@ApiParam(value = "JWT Token", required = true) @RequestHeader("Authorization") String jwt) {
 		PageHelper.startPage(pageIndex, perPage);
-		PageInfo<BasicBaseTraceabilityDetail> page = new PageInfo( basicBaseTraceabilityDetailService.getBasicBaseTraceabilityDetailAll(bean));
-		return new AjaxResult(HttpStatus.OK.value(),AjaxResult.SUCCESS,page);
+		PageInfo<BasicBaseTraceabilityDetail> page = new PageInfo<>(
+				basicBaseTraceabilityDetailService.getBasicBaseTraceabilityDetailAll(bean));
+		return new AjaxResult(HttpStatus.OK.value(), AjaxResult.SUCCESS, page);
 	}
 
 	@RequestMapping("/basicBaseTraceabilityDetail/daclist")
-	public Object daclist(HttpServletRequest request,@ApiIgnore @RequestParam Map<String, Object> params,	@ApiParam(value = " Tenant ID", required = true) @PathVariable("tenantId") String tenantId,	@ApiParam(value = "JWT Token", required = true) @RequestHeader("Authorization") String jwt) {
-			 String hid=request.getHeader("id");
-			String resourceIdDictKey="dp"+hid.substring(0, hid.length()-1);
-		CommonDictType commonDictType=commonDictTypeService.getDictTypeByKey(TokenUtils.extractTenantIdFromHttpReqeust(request),PermissionConstant.DATA_ACCESS_PERMISSION);
-		CommonDict dict =commonDictService.getCommonDictByIdTenantIdAndDictType(resourceIdDictKey,tenantId,commonDictType.getId());
-	 if (dict == null) {
-		params.put("strategyCode", PermissionConstant.COMMON_DATA_ACCESS_ALL);
-	}
-	 else {
-	    params.put("strategyCode", dict.getDictValue());
-	} 
-			int pageIndex=Integer.parseInt(params.get("index").toString());
-			int perPage=Integer.parseInt(params.get("perPage").toString());
+	public Object daclist(HttpServletRequest request, @ApiIgnore @RequestParam Map<String, Object> params,
+			@ApiParam(value = " Tenant ID", required = true) @PathVariable("tenantId") String tenantId,
+			@ApiParam(value = "JWT Token", required = true) @RequestHeader("Authorization") String jwt) {
+		String hid = request.getHeader("id");
+		String resourceIdDictKey = "dp" + hid.substring(0, hid.length() - 1);
+		CommonDictType commonDictType = commonDictTypeService.getDictTypeByKey(
+				TokenUtils.extractTenantIdFromHttpReqeust(request), PermissionConstant.DATA_ACCESS_PERMISSION);
+		CommonDict dict = commonDictService.getCommonDictByIdTenantIdAndDictType(resourceIdDictKey, tenantId,
+				commonDictType.getId());
+		if (dict == null) {
+			params.put("strategyCode", PermissionConstant.COMMON_DATA_ACCESS_ALL);
+		} else {
+			params.put("strategyCode", dict.getDictValue());
+		}
+		int pageIndex = Integer.parseInt(params.get("index").toString());
+		int perPage = Integer.parseInt(params.get("perPage").toString());
 		params.put("tenantId", tenantId);
-		params.put("pageStart", (pageIndex-1)*perPage);
+		params.put("pageStart", (pageIndex - 1) * perPage);
 		params.put("pageSize", perPage);
-		List<BasicBaseTraceabilityDetail> commonDictList =basicBaseTraceabilityDetailService.getBasicBaseTraceabilityDetailDAC(params, request);
-		Long count=basicBaseTraceabilityDetailService.getBasicBaseTraceabilityDetailDACCount(params, request);
-		PageInfo<BasicBaseTraceabilityDetail> page= new PageInfo<BasicBaseTraceabilityDetail>(commonDictList);
+		List<BasicBaseTraceabilityDetail> commonDictList = basicBaseTraceabilityDetailService
+				.getBasicBaseTraceabilityDetailDAC(params, request);
+		Long count = basicBaseTraceabilityDetailService.getBasicBaseTraceabilityDetailDACCount(params, request);
+		PageInfo<BasicBaseTraceabilityDetail> page = new PageInfo<BasicBaseTraceabilityDetail>(commonDictList);
 		page.setTotal(count);
 		page.setPageSize(perPage);
 		page.setPageNum(pageIndex);
-		page.setPages(Integer.parseInt(new Long(count%new Long(perPage) ==0 ? count%new Long(perPage) :count%new Long(perPage) +1).toString()));		return new AjaxResult(HttpStatus.OK.value(),AjaxResult.SUCCESS,page);
+		page.setPages(Integer.parseInt(
+				Long.valueOf(count % Long.valueOf(perPage) == 0 ? count % Long.valueOf(perPage)
+						: count % Long.valueOf(perPage) + 1)
+						.toString()));
+		return new AjaxResult(HttpStatus.OK.value(), AjaxResult.SUCCESS, page);
 	}
 
-	 
-	@RequestMapping(value = "/basicBaseTraceabilityDetail",method = RequestMethod.POST)
-	public Object save(@RequestBody BasicBaseTraceabilityDetail bean,HttpServletRequest request, HttpServletResponse response) {
-		try{
+	@RequestMapping(value = "/basicBaseTraceabilityDetail", method = RequestMethod.POST)
+	public Object save(@RequestBody BasicBaseTraceabilityDetail bean, HttpServletRequest request,
+			HttpServletResponse response) {
+		try {
 			int success = basicBaseTraceabilityDetailService.createBasicBaseTraceabilityDetailWithOrg(bean, request);
-				if(success > 0){
-					return new AjaxResult(HttpStatus.OK.value(),AjaxResult.SUCCESS,null);
-				}else{
-					 throw new QslException(MessageKey.ERROR_INSERTING_DATABASE);
-				}
-		}catch (Exception e){
+			if (success > 0) {
+				return new AjaxResult(HttpStatus.OK.value(), AjaxResult.SUCCESS, null);
+			} else {
+				throw new QslException(MessageKey.ERROR_INSERTING_DATABASE);
+			}
+		} catch (Exception e) {
 			e.printStackTrace();
-			 throw new QslException(MessageKey.ERROR_INSERTING_DATABASE);
+			throw new QslException(MessageKey.ERROR_INSERTING_DATABASE);
 		}
 	}
 
-	 
-	@RequestMapping(value = "/basicBaseTraceabilityDetail",method = RequestMethod.PUT)
-	public Object update(@RequestBody BasicBaseTraceabilityDetail bean,HttpServletRequest request, HttpServletResponse response) {
-		try{
+	@RequestMapping(value = "/basicBaseTraceabilityDetail", method = RequestMethod.PUT)
+	public Object update(@RequestBody BasicBaseTraceabilityDetail bean, HttpServletRequest request,
+			HttpServletResponse response) {
+		try {
 			int success = basicBaseTraceabilityDetailService.updateBasicBaseTraceabilityDetail(bean);
-				if(success > 0){
-					return new AjaxResult(HttpStatus.OK.value(),AjaxResult.SUCCESS, null);
-				}else{
-					 throw new QslException(MessageKey.ERROR_INSERTING_DATABASE);
-				}
-		}catch (Exception e){
+			if (success > 0) {
+				return new AjaxResult(HttpStatus.OK.value(), AjaxResult.SUCCESS, null);
+			} else {
+				throw new QslException(MessageKey.ERROR_INSERTING_DATABASE);
+			}
+		} catch (Exception e) {
 			e.printStackTrace();
-			 throw new QslException(MessageKey.ERROR_INSERTING_DATABASE);
+			throw new QslException(MessageKey.ERROR_INSERTING_DATABASE);
 		}
 	}
 
-	 
-	@RequestMapping(value = "/basicBaseTraceabilityDetail",method = RequestMethod.DELETE)
-	public Object del(String id,HttpServletRequest request, HttpServletResponse response) {
-		try{
+	@RequestMapping(value = "/basicBaseTraceabilityDetail", method = RequestMethod.DELETE)
+	public Object del(String id, HttpServletRequest request, HttpServletResponse response) {
+		try {
 			Boolean success = basicBaseTraceabilityDetailService.deleteById(Long.parseLong(id));
-				if(success ){
-					return new AjaxResult(HttpStatus.OK.value(),AjaxResult.SUCCESS,null);
-				}else{
-					 throw new QslException(MessageKey.ERROR_INSERTING_DATABASE);
-				}
-		}catch (Exception e){
+			if (success) {
+				return new AjaxResult(HttpStatus.OK.value(), AjaxResult.SUCCESS, null);
+			} else {
+				throw new QslException(MessageKey.ERROR_INSERTING_DATABASE);
+			}
+		} catch (Exception e) {
 			e.printStackTrace();
-			 throw new QslException(MessageKey.ERROR_INSERTING_DATABASE);
+			throw new QslException(MessageKey.ERROR_INSERTING_DATABASE);
 		}
 	}
 
-	 
-	@RequestMapping(value = "/basicBaseTraceabilityDetail/{basicBaseTraceabilityDetailId}",method = RequestMethod.GET)
-	public Object getOne(@PathVariable("/basicBaseTraceabilityDetailId") Long id, HttpServletRequest request, HttpServletResponse response) {
-			 return new AjaxResult(HttpStatus.OK.value(),AjaxResult.SUCCESS,basicBaseTraceabilityDetailService.selectById(id));
-}
-
+	@RequestMapping(value = "/basicBaseTraceabilityDetail/{basicBaseTraceabilityDetailId}", method = RequestMethod.GET)
+	public Object getOne(@PathVariable("/basicBaseTraceabilityDetailId") Long id, HttpServletRequest request,
+			HttpServletResponse response) {
+		return new AjaxResult(HttpStatus.OK.value(), AjaxResult.SUCCESS,
+				basicBaseTraceabilityDetailService.selectById(id));
+	}
 
 }
